add functionality to the app: autorisations, added css,...

--- a/JokesWebApp/Views/Home/Index.cshtml
+++ b/JokesWebApp/Views/Home/Index.cshtml
@@ -4,5 +4,12 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>the formost authority for good humor you will find anywere on your local host.</a>.</p>
+        <div>
+                <p>
+                    My name is Victor Lambert, i created this webapp to test my .net knowledge.
+                    On this webapp u can add, edit and deleted jokes But only if ur logged in on the page with a mail adress.
+                    if u want to search jokes u can use the 'search' button in top to check for keywords.
+                    Hope u enjoy!
+                </p>
+            </div>
 </div>
